--- a/baseball_python.ipynb
+++ b/baseball_python.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -141,208 +141,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Austin Gomber</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ranger Suarez</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Charlie Blackmon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ezequiel Tovar</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Ryan McMahon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Elias Diaz</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Nolan Jones</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Elehuris Montero</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Brenton Doyle</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Michael Toglia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Alan Trejo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Jose Soriano</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Aaron Civale</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
        "      <td>Jordan Hicks</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>1</th>\n",
        "      <td>Ryan Weathers</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Chris Paddack</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Luis Arraez</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Grayson Rodriguez</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Jazz Chisholm Jr.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Dylan Cease</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Bryan De La Cruz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Wade Miley</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Carlos Rodon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Yusei Kikuchi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Jared Jones</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Jose Quintana</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Tanner Bibee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Garrett Whitlock</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Kyle Hendricks</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Tommy Henry</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Brady Singer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Jonathan Cannon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Dominic Leone</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Tanner Banks</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>Patrick Corbin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>Ryan Yarbrough</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>Reynaldo Lopez</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
+       "      <th>124</th>\n",
        "      <td>Hunter Brown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
+       "      <th>125</th>\n",
        "      <td>Lance Lynn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
+       "      <th>126</th>\n",
        "      <td>JP Sears</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
+       "      <th>127</th>\n",
        "      <td>Hunter Greene</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38</th>\n",
+       "      <th>128</th>\n",
        "      <td>Logan Gilbert</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>129 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    0\n",
-       "0       Austin Gomber\n",
-       "1       Ranger Suarez\n",
-       "2    Charlie Blackmon\n",
-       "3      Ezequiel Tovar\n",
-       "4        Ryan McMahon\n",
-       "5          Elias Diaz\n",
-       "6         Nolan Jones\n",
-       "7    Elehuris Montero\n",
-       "8       Brenton Doyle\n",
-       "9      Michael Toglia\n",
-       "10         Alan Trejo\n",
-       "11       Jose Soriano\n",
-       "12       Aaron Civale\n",
-       "13       Jordan Hicks\n",
-       "14      Ryan Weathers\n",
-       "15      Chris Paddack\n",
-       "16  Grayson Rodriguez\n",
-       "17        Dylan Cease\n",
-       "18         Wade Miley\n",
-       "19       Carlos Rodon\n",
-       "20      Yusei Kikuchi\n",
-       "21        Jared Jones\n",
-       "22      Jose Quintana\n",
-       "23       Tanner Bibee\n",
-       "24   Garrett Whitlock\n",
-       "25     Kyle Hendricks\n",
-       "26        Tommy Henry\n",
-       "27       Brady Singer\n",
-       "28    Jonathan Cannon\n",
-       "29      Dominic Leone\n",
-       "30       Tanner Banks\n",
-       "31     Patrick Corbin\n",
-       "32     Ryan Yarbrough\n",
-       "33     Reynaldo Lopez\n",
-       "34       Hunter Brown\n",
-       "35         Lance Lynn\n",
-       "36           JP Sears\n",
-       "37      Hunter Greene\n",
-       "38      Logan Gilbert"
+       "                     0\n",
+       "0         Jordan Hicks\n",
+       "1        Ryan Weathers\n",
+       "2          Luis Arraez\n",
+       "3    Jazz Chisholm Jr.\n",
+       "4     Bryan De La Cruz\n",
+       "..                 ...\n",
+       "124       Hunter Brown\n",
+       "125         Lance Lynn\n",
+       "126           JP Sears\n",
+       "127      Hunter Greene\n",
+       "128      Logan Gilbert\n",
+       "\n",
+       "[129 rows x 1 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
