--- a/baseball_python.ipynb
+++ b/baseball_python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,71 +141,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Jordan Hicks</td>\n",
+       "      <td>Ranger Suarez</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Ryan Weathers</td>\n",
+       "      <td>Hunter Greene</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Luis Arraez</td>\n",
+       "      <td>Kyle Schwarber</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Jazz Chisholm Jr.</td>\n",
+       "      <td>Trea Turner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Bryan De La Cruz</td>\n",
+       "      <td>J.T. Realmuto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>Brenton Doyle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>124</th>\n",
-       "      <td>Hunter Brown</td>\n",
+       "      <td>Brendan Rodgers</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125</th>\n",
-       "      <td>Lance Lynn</td>\n",
+       "      <td>Sean Bouchard</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>126</th>\n",
-       "      <td>JP Sears</td>\n",
+       "      <td>Jose Quintana</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>127</th>\n",
-       "      <td>Hunter Greene</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>Logan Gilbert</td>\n",
+       "      <td>Keaton Winn</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>129 rows × 1 columns</p>\n",
+       "<p>128 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     0\n",
-       "0         Jordan Hicks\n",
-       "1        Ryan Weathers\n",
-       "2          Luis Arraez\n",
-       "3    Jazz Chisholm Jr.\n",
-       "4     Bryan De La Cruz\n",
-       "..                 ...\n",
-       "124       Hunter Brown\n",
-       "125         Lance Lynn\n",
-       "126           JP Sears\n",
-       "127      Hunter Greene\n",
-       "128      Logan Gilbert\n",
+       "                   0\n",
+       "0      Ranger Suarez\n",
+       "1      Hunter Greene\n",
+       "2     Kyle Schwarber\n",
+       "3        Trea Turner\n",
+       "4      J.T. Realmuto\n",
+       "..               ...\n",
+       "123    Brenton Doyle\n",
+       "124  Brendan Rodgers\n",
+       "125    Sean Bouchard\n",
+       "126    Jose Quintana\n",
+       "127      Keaton Winn\n",
        "\n",
-       "[129 rows x 1 columns]"
+       "[128 rows x 1 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
